tests/paczka2/big_fuzzy/18619130.err
Error in line 1: IAVUv A855 39,8
Error in line 2: FHq S284 58,2
Error in line 6: FHq S922 32,9
Error in line 5: h67yaEAEPz S284 85,5
Error in line 11: pHVX S922 7h,1
Error in line 13: IAVUv SP3P 25,6
Error in line 25: IAVUv S737 81,14
Error in line 12: S737 A855 88,9
Error in line 54: zMy S922 75,14
Error in line 42: zMy S922 59,9
Error in line 56: S737 S737 198,4
Error in line 74: h67yaEAEPz S737 4,0
Error in line 67: FHq S284 43,8
Error in line 94: IAVUv A855 3,7
Error in line 97: zMy A855 95,6
Error in line 100: IAVUv S737 49,3
Error in line 102: zMy S284 16,2
Error in line 96: h67yaEAEPz A855 21,7
Error in line 119: FHq S737 63,9
Error in line 128: kMj1W4v S922 39,1
Error in line 142: kMj1W4v S284 37,7
Error in line 126: h67yaEAEPz S284 234,6
Error in line 158: pHVX S284 56,9
Error in line 162: zMy A855 35,6
Error in line 170: FHq S922 54,79
Error in line 161: pHVX S737 93,0
Error in line 171: kMj1W4v S922 8,3
Error in line 176: FHq S922 123,5
Error in line 196: kMj1W4v S284 56,1
Error in line 180: IAVUv A855 288,5
Error in line 192: FHq S284 121,6
Error in line 202: pHVX A855 66,8
Error in line 215: zMy S922 29,9
Error in line 221: IAVUv S284 141,6
Error in line 230: zMy A855 92,50
Error in line 228: IAVUv A855 15,0
